--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fontsource/roboto": "^5.0.3",
     "@mantine/core": "^6.0.14",
     "@mantine/hooks": "^6.0.14",
+    "@mantine/notifications": "^6.0.17",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@tabler/icons-react": "^2.24.0",
+    "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
