--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.3",
     "@mantine/core": "^6.0.14",
+    "@mantine/form": "^6.0.17",
     "@mantine/hooks": "^6.0.14",
     "@mantine/notifications": "^6.0.17",
     "@mui/icons-material": "^5.11.16",
